[REFACTOR] fix code issue in ChatroomTest